--- a/home.html
+++ b/home.html
@@ -103,7 +103,7 @@
         </div>
       </section>
       
-      <section id="random" class="recipes">
+      <section id="random">
         <br/>
         <div class="container">
           <div class="row">
@@ -119,8 +119,10 @@
               </div> 
           </div>
           <div class="row">
+            <div class="recipes">
             <div class="four columns mealImg" id="randomMealImg"><div class="loader"></div></div>
             <div class="eight columns mealMetadata" id=randomMealMetadata></div>
+          </div>
           </div>
           <div class="row">
             <div class="twelve columns mealInstructions" id="randomMealInstructions"></div>
