--- a/home.html
+++ b/home.html
@@ -19,10 +19,10 @@
           <nav class="navbar">
               <div class="container">
                 <div class="row">
-                    <div class="eight columns">
+                    <div class="eight columns brand-a">
                         <a class="brand" tabindex="0" title="The Hungry Recipes">The Hungry Recipes</a>
                       </div>
-                      <div class="four columns">
+                      <div class="four columns end">
                         <ul class="navbar-list">
                           <li class="navbar-item"><a class="navbar-link btnRandomRecipe clear-field" tabindex="0" href="#random" title="Show a random recipe">Random</a></li>                       
                           <li class="navbar-item"><a class="navbar-link" tabindex="0" href="#about-section">About</a></li>
@@ -66,8 +66,8 @@
                           </div>
                         </div>
                         <div class="row">
-                          <div class="eight columns">
-                            <ul class="navbar-list u-full-width" style="text-align:center;" id="NavBarCategory">
+                          <div class="eight columns list-recipe">
+                            <ul class="navbar-list u-full-width"  id="NavBarCategory">
                             </ul>
                           </div>
                         </div>
